--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -3,10 +3,19 @@ header {
     justify-content:space-between;
     max-width: 100vw;
     margin: 0 auto;
+    background-color:$green;
+    box-shadow: 0px .3rem 0px 0px rgba(12,192,158,0.6), 
+                0 .6rem 0px 0px rgba(12,192,158,0.4), 
+                0 .9rem 0px 0px rgba(12,192,158,0.2);
 
     h1 {
         padding: 0; 
         margin: 0;
+    }
+
+    img {
+        width: 20%;
+        padding: 1rem;
     }
 
     nav {
