--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -1,37 +1,49 @@
 header {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 17.5vw 65vw auto;
   max-width: 100vw;
-  margin: 0 auto;
-  background-color: #0CC09E;
-  box-shadow: 0px 0.3rem 0px 0px rgba(12, 192, 158, 0.6), 0 0.6rem 0px 0px rgba(12, 192, 158, 0.4), 0 0.9rem 0px 0px rgba(12, 192, 158, 0.2);
-}
-header h1 {
-  padding: 0;
-  margin: 0;
+  background-color: #4361EE;
+  box-shadow: 0px 0.3rem 0px 0px rgba(67, 97, 238, 0.6), 0 0.6rem 0px 0px rgba(67, 97, 238, 0.4), 0 0.9rem 0px 0px rgba(67, 97, 238, 0.2);
 }
 header img {
-  width: 20%;
-  padding: 1rem;
+  grid-area: 1/1/2/2;
+  width: 16rem;
+  padding: 2rem 1rem;
 }
 header nav {
-  display: flex;
-  align-items: center;
+  grid-area: 1/2/2/3;
+  align-self: center;
 }
 header nav ul {
   display: flex;
-}
-header nav ul li {
-  margin: 0 2rem;
+  justify-content: space-evenly;
+  align-items: center;
 }
 header nav ul li a {
   font-size: 1.1rem;
-  color: #FAFAFA;
-  background-color: #4361EE;
+  color: #4361EE;
+  background-color: #FAFAFA;
   text-decoration: none;
   padding: 0.8rem 1.2rem;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+}
+header nav form {
+  display: flex;
+  align-items: center;
+}
+header nav form input {
+  width: 3rem;
+  height: 3rem;
+  border: none;
+  background-image: url("/res04-projet-soutenance/assets/images/logout-icon.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  cursor: pointer;
+}
+header nav form input:hover {
+  filter: saturate(0);
 }
 
 .presentation {
@@ -63,23 +75,23 @@ header nav ul li a {
 /**** CSS of index Villagers ****/
 .search {
   display: block;
-  margin: 0.8rem auto;
-  border: none;
+  margin: 2rem auto;
+  border: 1px solid #D61E92;
   padding: 0.5rem 0.4rem;
-  background-color: #4361EE;
+  background-color: rgba(214, 30, 146, 0.2);
 }
 .search::-moz-placeholder {
-  color: #FAFAFA;
+  color: #0C092B;
   font-family: "Inconsolata", sans-serif;
 }
 .search::placeholder {
-  color: #FAFAFA;
+  color: #0C092B;
   font-family: "Inconsolata", sans-serif;
 }
 .search:focus {
   outline: none;
   font-family: #0C092B;
-  color: #FAFAFA;
+  color: #0C092B;
 }
 
 .villagers ul {
@@ -111,7 +123,9 @@ header nav ul li a {
   transform: scale(1.15);
 }
 
+/**** CSS of a single villager ****/
 .single-villager {
+  margin: 2rem 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 10rem repeat(3, auto);
@@ -149,15 +163,18 @@ header nav ul li a {
 }
 .single-villager .villager-events {
   grid-area: 2/1/3/3;
+  margin: 1rem 0;
 }
 .single-villager .villager-events .events tr th {
   width: 8rem;
 }
 .single-villager .gifts {
   grid-area: 3/1/4/3;
+  margin: 1rem 0;
 }
 .single-villager .planning {
   grid-area: 4/1/5/3;
+  margin: 1rem 0;
 }
 
 .admin-header {
@@ -316,7 +333,7 @@ html body .hidden {
   display: none;
 }
 html body main {
-  max-width: 70vw;
+  max-width: 65vw;
   margin: 0 auto;
 }
 html body p {
@@ -333,4 +350,8 @@ html body h1, html body h2, html body h3, html body h4 {
 html body h2 {
   font-size: 2rem;
   text-align: center;
+  margin-top: 3rem;
+}
+html body h3 {
+  margin-bottom: 1.5rem;
 }/*# sourceMappingURL=style.css.map */
