--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -26,7 +26,7 @@ html {
         }
 
         main {
-            max-width: 70vw;
+            max-width: 65vw;
             margin: 0 auto;
         }
 
@@ -47,6 +47,11 @@ html {
         h2 {
             font-size: 2rem;
             text-align: center;
+            margin-top: 3rem;
+        }
+
+        h3 {
+            margin-bottom: 1.5rem;
         }
     }
 }
