--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -1,4 +1,7 @@
+/**** CSS of a single villager ****/
+
 .single-villager {
+    margin: 2rem 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 10rem repeat(3, auto);
@@ -13,7 +16,7 @@
         background-color: $green;
         clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
     }
-    
+
     .villager-general {
         grid-area: 1/1/2/2;
         align-self: center;
@@ -42,6 +45,7 @@
 
     .villager-events {
         grid-area: 2/1/3/3;
+        margin: 1rem 0;
 
         .events {
             tr {
@@ -54,10 +58,12 @@
     
     .gifts {
         grid-area: 3/1/4/3;
+        margin: 1rem 0;
     }
 
     .planning {
         grid-area: 4/1/5/3;
+        margin: 1rem 0;
     }
 }
 
