--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -1,41 +1,57 @@
 header {
-    display:flex;
-    justify-content:space-between;
+    display:grid;
+    grid-template-columns: 17.5vw 65vw auto;
     max-width: 100vw;
-    margin: 0 auto;
-    background-color:$green;
-    box-shadow: 0px .3rem 0px 0px rgba(12,192,158,0.6), 
-                0 .6rem 0px 0px rgba(12,192,158,0.4), 
-                0 .9rem 0px 0px rgba(12,192,158,0.2);
-
-    h1 {
-        padding: 0; 
-        margin: 0;
-    }
+    background-color:$blue;
+    box-shadow: 0px .3rem 0px 0px rgba(67,97,238,0.6), 
+                0 .6rem 0px 0px rgba(67,97,238,0.4), 
+                0 .9rem 0px 0px rgba(67,97,238,0.2);
 
     img {
-        width: 20%;
-        padding: 1rem;
+        grid-area: 1/1/2/2;
+        width: 16rem;
+        padding: 2rem 1rem;
     }
 
     nav {
-        display:flex;
-        align-items:center;
+        grid-area: 1/2/2/3;
+        align-self: center;
 
         ul {
             display:flex;
+            justify-content: space-evenly;
+            align-items:center;
 
             li {
-                margin:0 2rem;
 
                 a {
                     font-size: 1.1rem;
-                    color: $background;
-                    background-color: $blue;
+                    color: $blue;
+                    background-color: $background;
                     text-decoration: none;
                     padding: .8rem 1.2rem;
                     clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
                                     100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+                }
+            }
+        }
+
+        form {
+            display:flex;
+            align-items:center;
+    
+            input {
+                width: 3rem;
+                height: 3rem;
+                border:none;
+                background-image: url('/res04-projet-soutenance/assets/images/logout-icon.png');
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-color: transparent;
+                cursor: pointer;
+    
+                &:hover {
+                    filter: saturate(0);
                 }
             }
         }
