--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -50,7 +50,8 @@
         .events {
             tr {
                 th {
-                    width: 8rem;
+                    width: 9rem;
+                    text-align: left;
                 }
             }
         }
