--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -47,7 +47,7 @@ html {
         h2 {
             font-size: 2rem;
             text-align: center;
-            margin-top: 3rem;
+            margin: 3rem 0;
         }
 
         h3 {
