--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -1,72 +1,81 @@
 /**** CSS of a single villager ****/
 
-.single-villager {
-    margin: 2rem 0;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 10rem repeat(3, auto);
+.villager {
 
-    .villager-picture {
-        grid-area: 1/2/2/3;
-        justify-self: self-end;
-        align-self: center;
-        width: 10rem;
-        padding-top: .6rem;
-        padding: 0 .6rem;
-        background-color: $green;
-        clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-    }
-
-    .villager-general {
-        grid-area: 1/1/2/2;
-        align-self: center;
-    }
-
-    .title {
+    .single-villager {
+        margin: 2rem 0;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 12rem repeat(3, auto);
+        grid-row-gap: 2.5rem;
     
-        button {
-            border: none;
-            background-color: $blue;
-            padding: 0.6rem .8rem;
-            font-family: $text-font;
-            color: $background;
-            font-size:1.05rem;
-            clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
-                                    100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-            cursor: pointer;
-            
-            &.button-focus {
-                // background-color: $pink;
-                font-weight: bolder;
-                clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-            }
+        .villager-picture {
+            grid-area: 1/2/2/3;
+            justify-self: self-end;
+            align-self: center;
+            width: 12rem;
+            padding-top: .6rem;
+            padding: 0 .6rem;
+            background-color: $green;
+            clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
         }
-    }
+    
+        .villager-general {
+            grid-area: 1/1/2/2;
+            align-self: center;
+            justify-self: center;
+            padding: 1rem 2rem;
+            background-color: $green;
+            box-shadow: 0px 0px 0px .3rem rgba(12,192,158,0.6), 
+                        0px 0px 0px .6rem rgba(12,192,158,0.4), 
+                        0px 0px 0px .9rem rgba(12,192,158,0.2);
+        }
+    
+        .title {
+            justify-self:center;
 
-    .villager-events {
-        grid-area: 2/1/3/3;
-        margin: 1rem 0;
-
-        .events {
-            tr {
-                th {
-                    width: 9rem;
-                    text-align: left;
+            button {
+                border: none;
+                background-color: $blue;
+                padding: 0.6rem .8rem;
+                font-family: $text-font;
+                color: $background;
+                font-size:1.05rem;
+                clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                                        100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+                cursor: pointer;
+                
+                &.button-focus {
+                    // background-color: $pink;
+                    font-weight: bolder;
+                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
                 }
             }
         }
-    }
     
-    .gifts {
-        grid-area: 3/1/4/3;
-        margin: 1rem 0;
-    }
-
-    .planning {
-        grid-area: 4/1/5/3;
-        margin: 1rem 0;
+        .villager-events {
+            grid-area: 2/1/3/2;
+    
+            .events {
+                tr {
+                    th {
+                        width: 9rem;
+                        text-align: left;
+                    }
+                }
+            }
+        }
+        
+        .gifts {
+            grid-area: 2/2/3/3;
+        }
+    
+        .planning {
+            grid-area: 3/1/4/3;
+        }
     }
 }
+
 
 
 
