Changed the villager page layout

--- a/assets/styles/scss/_vars.scss
+++ b/assets/styles/scss/_vars.scss
@@ -1,5 +1,6 @@
 $green: #0CC09E;
-$background: #FAFAFA;
+$background-main: #FAFAFA;
+$background-body: #D9D9D9;
 $blue: #4361EE;
 $pink: #D61E92;
 $text-color: #0C092B;
