--- a/templates/users/villagers/villager.phtml
+++ b/templates/users/villagers/villager.phtml
@@ -43,8 +43,8 @@
         </section>
 
         <section id="gifts" class="gifts">
-            <h3 class="title"><button>Gifts</button></h3>
-            <table class="events">
+            <h3><button>Gifts</button></h3>
+            <table>
                 <tr>
                     <th>Loves</th>
                     <td>
