--- a/assets/styles/scss/admin/_data.scss
+++ b/assets/styles/scss/admin/_data.scss
@@ -46,7 +46,7 @@
                     cursor: pointer;
 
                     &:hover {
-                        background-color: $background;
+                        background-color: $background-main;
                     }
                 }
             }
