--- a/assets/styles/scss/admin/partials/_header.scss
+++ b/assets/styles/scss/admin/partials/_header.scss
@@ -18,7 +18,7 @@
         padding: 2rem 1rem;
         align-self: center;
         text-align: center;
-        color: $background;
+        color: $background-main;
     }
 
     form {
@@ -30,7 +30,7 @@
 
         input {
             border:none;
-            background-color: $background;
+            background-color: $background-main;
             clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
                             100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
             color: $blue;
@@ -51,7 +51,7 @@
                 margin: 2rem 0;
 
                 a {
-                    background-color: $background;
+                    background-color: $background-main;
                     color: $blue;
                     font-weight: bolder;
                 }
