--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -3,7 +3,6 @@ header {
   grid-template-columns: 17.5vw 65vw auto;
   max-width: 100vw;
   background-color: #4361EE;
-  box-shadow: 0px 0.3rem 0px 0px rgba(67, 97, 238, 0.6), 0 0.6rem 0px 0px rgba(67, 97, 238, 0.4), 0 0.9rem 0px 0px rgba(67, 97, 238, 0.2);
 }
 header img {
   grid-area: 1/1/2/2;
@@ -73,69 +72,74 @@ header nav form input:hover {
 }
 
 /**** CSS of index Villagers ****/
-.search {
+.all-villagers {
+  background-color: #FAFAFA;
+}
+.all-villagers .search {
   display: block;
   margin: 2rem auto;
   border: 1px solid #D61E92;
   padding: 0.5rem 0.4rem;
   background-color: rgba(214, 30, 146, 0.2);
 }
-.search::-moz-placeholder {
+.all-villagers .search::-moz-placeholder {
   color: #0C092B;
   font-family: "Inconsolata", sans-serif;
 }
-.search::placeholder {
+.all-villagers .search::placeholder {
   color: #0C092B;
   font-family: "Inconsolata", sans-serif;
 }
-.search:focus {
+.all-villagers .search:focus {
   outline: none;
   font-family: #0C092B;
   color: #0C092B;
 }
-
-.villagers ul {
+.all-villagers .villagers ul {
   margin: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.villagers ul li {
+.all-villagers .villagers ul li {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 1rem 1.2rem;
   transition: transform 0.3s ease;
 }
-.villagers ul li img {
+.all-villagers .villagers ul li img {
   padding-top: 0.6rem;
   padding: 0 0.6rem;
   background-color: #0CC09E;
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
-.villagers ul li a {
+.all-villagers .villagers ul li a {
   text-decoration: none;
   color: #0C092B;
   margin-top: 0.2rem;
 }
-.villagers ul li:hover {
+.all-villagers .villagers ul li:hover {
   transform: scale(1.15);
 }
 
 /**** CSS of a single villager ****/
+.villager {
+  background-color: #FAFAFA;
+  padding: 1.5rem;
+}
 .villager .single-villager {
-  margin: 2rem 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 12rem repeat(3, auto);
-  grid-row-gap: 2.5rem;
+  grid-template-rows: 18rem repeat(2, auto);
+  grid-row-gap: 1rem;
+  grid-column-gap: 2rem;
 }
 .villager .single-villager .villager-picture {
-  grid-area: 1/2/2/3;
-  justify-self: self-end;
-  align-self: center;
-  width: 12rem;
+  grid-area: 1/1/2/2;
+  justify-self: center;
+  width: 14rem;
   padding-top: 0.6rem;
   padding: 0 0.6rem;
   background-color: #0CC09E;
@@ -143,12 +147,10 @@ header nav form input:hover {
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 .villager .single-villager .villager-general {
-  grid-area: 1/1/2/2;
-  align-self: center;
+  grid-area: 2/1/3/2;
   justify-self: center;
   padding: 1rem 2rem;
-  background-color: #0CC09E;
-  box-shadow: 0px 0px 0px 0.3rem rgba(12, 192, 158, 0.6), 0px 0px 0px 0.6rem rgba(12, 192, 158, 0.4), 0px 0px 0px 0.9rem rgba(12, 192, 158, 0.2);
+  text-align: center;
 }
 .villager .single-villager .title {
   justify-self: center;
@@ -170,17 +172,33 @@ header nav form input:hover {
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 .villager .single-villager .villager-events {
-  grid-area: 2/1/3/2;
+  grid-area: 3/1/4/2;
+  border: 2px dashed #D61E92;
+  padding: 1rem;
 }
 .villager .single-villager .villager-events .events tr th {
   width: 9rem;
   text-align: left;
 }
 .villager .single-villager .gifts {
-  grid-area: 2/2/3/3;
+  grid-area: 1/2/3/3;
+  border: 2px dashed #D61E92;
+  padding: 1rem;
+}
+.villager .single-villager .gifts h3 button {
+  border: none;
+  background-color: #4361EE;
+  padding: 0.6rem 0.8rem;
+  font-family: "Inconsolata", sans-serif;
+  color: #FAFAFA;
+  font-size: 1.05rem;
+  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 .villager .single-villager .planning {
-  grid-area: 3/1/4/3;
+  grid-area: 3/2/4/3;
+  border: 2px dashed #D61E92;
+  padding: 1rem;
 }
 
 .admin-header {
@@ -329,7 +347,7 @@ html {
 html body {
   font-family: "Inconsolata", sans-serif;
   font-size: 1rem;
-  background-color: #FAFAFA;
+  background-color: #D9D9D9;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -341,6 +359,7 @@ html body .hidden {
 html body main {
   max-width: 65vw;
   margin: 0 auto;
+  box-shadow: inset 0.3rem 0px 0px 0px rgba(217, 217, 217, 0.6), inset -0.3rem 0px 0px 0px rgba(217, 217, 217, 0.6), inset 0.6rem 0px 0px 0px rgba(217, 217, 217, 0.4), inset -0.6rem 0px 0px 0px rgba(217, 217, 217, 0.4);
 }
 html body p {
   margin: 0;
@@ -356,7 +375,7 @@ html body h1, html body h2, html body h3, html body h4 {
 html body h2 {
   font-size: 2rem;
   text-align: center;
-  margin: 3rem 0;
+  padding: 2.5rem 0;
 }
 html body h3 {
   margin-bottom: 1.5rem;
