--- a/assets/styles/scss/users/_villagers.scss
+++ b/assets/styles/scss/users/_villagers.scss
@@ -1,54 +1,58 @@
 /**** CSS of index Villagers ****/
 
-.search {
-    display: block;
-    margin: 2rem auto;
-    border: 1px solid $pink;
-    padding: 0.5rem .4rem;
-    background-color: rgba(214, 30, 146, 0.2);
+.all-villagers {
+    background-color: $background-main;
 
-    &::placeholder {
-        color : $text-color;
-        font-family: $text-font;
+    .search {
+        display: block;
+        margin: 2rem auto;
+        border: 1px solid $pink;
+        padding: 0.5rem .4rem;
+        background-color: rgba(214, 30, 146, 0.2);
+    
+        &::placeholder {
+            color : $text-color;
+            font-family: $text-font;
+        }
+    
+        &:focus {
+            outline: none;
+            font-family: $text-color;
+            color: $text-color;
+        }
     }
-
-    &:focus {
-        outline: none;
-        font-family: $text-color;
-        color: $text-color;
-    }
-}
-
-.villagers {
-
-    ul {
-        margin: 0;
-        display:flex;
-        flex-wrap: wrap;
-        justify-content:space-between;
-
-        li {
+    
+    .villagers {
+    
+        ul {
+            margin: 0;
             display:flex;
-            flex-direction: column;
-            align-items:center;
-            margin: 1rem 1.2rem;
-            transition: transform 0.3s ease;
-
-            img {
-                padding-top: .6rem;
-                padding: 0 .6rem;
-                background-color: $green;
-                clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-            }
-
-            a {
-                text-decoration: none;
-                color: $text-color;
-                margin-top:.2rem;
-            }
-
-            &:hover {
-                transform: scale(1.15);
+            flex-wrap: wrap;
+            justify-content:space-between;
+    
+            li {
+                display:flex;
+                flex-direction: column;
+                align-items:center;
+                margin: 1rem 1.2rem;
+                transition: transform 0.3s ease;
+    
+                img {
+                    padding-top: .6rem;
+                    padding: 0 .6rem;
+                    background-color: $green;
+                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+                }
+    
+                a {
+                    text-decoration: none;
+                    color: $text-color;
+                    margin-top:.2rem;
+                }
+    
+                &:hover {
+                    transform: scale(1.15);
+                }
             }
         }
     }
