--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -3,9 +3,9 @@ header {
     grid-template-columns: 17.5vw 65vw auto;
     max-width: 100vw;
     background-color:$blue;
-    box-shadow: 0px .3rem 0px 0px rgba(67,97,238,0.6), 
-                0 .6rem 0px 0px rgba(67,97,238,0.4), 
-                0 .9rem 0px 0px rgba(67,97,238,0.2);
+    // box-shadow: 0px .3rem 0px 0px rgba(67,97,238,0.6), 
+    //             0 .6rem 0px 0px rgba(67,97,238,0.4), 
+    //             0 .9rem 0px 0px rgba(67,97,238,0.2);
 
     img {
         grid-area: 1/1/2/2;
@@ -27,7 +27,7 @@ header {
                 a {
                     font-size: 1.1rem;
                     color: $blue;
-                    background-color: $background;
+                    background-color: $background-main;
                     text-decoration: none;
                     padding: .8rem 1.2rem;
                     clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
