--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -127,30 +127,30 @@ header nav form input:hover {
 /**** CSS of a single villager ****/
 .villager {
   background-color: #FAFAFA;
-  padding: 1.5rem;
 }
 .villager .single-villager {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 18rem repeat(2, auto);
+  grid-template-rows: 14rem repeat(3, auto);
   grid-row-gap: 1rem;
   grid-column-gap: 2rem;
 }
 .villager .single-villager .villager-picture {
-  grid-area: 1/1/2/2;
+  grid-area: 1/1/2/3;
   justify-self: center;
   width: 14rem;
-  padding-top: 0.6rem;
-  padding: 0 0.6rem;
   background-color: #0CC09E;
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 .villager .single-villager .villager-general {
-  grid-area: 2/1/3/2;
+  grid-area: 2/1/3/3;
   justify-self: center;
-  padding: 1rem 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  width: 14rem;
   text-align: center;
+  border: 2px dashed #D61E92;
 }
 .villager .single-villager .title {
   justify-self: center;
@@ -176,12 +176,21 @@ header nav form input:hover {
   border: 2px dashed #D61E92;
   padding: 1rem;
 }
-.villager .single-villager .villager-events .events tr th {
-  width: 9rem;
-  text-align: left;
+.villager .single-villager .villager-events h3 button {
+  border: none;
+  background-color: #4361EE;
+  padding: 0.6rem 0.8rem;
+  font-family: "Inconsolata", sans-serif;
+  color: #FAFAFA;
+  font-size: 1.05rem;
+  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+}
+.villager .single-villager .villager-events table tr th {
+  padding-top: 0.7rem;
 }
 .villager .single-villager .gifts {
-  grid-area: 1/2/3/3;
+  grid-area: 3/2/4/3;
   border: 2px dashed #D61E92;
   padding: 1rem;
 }
@@ -196,7 +205,7 @@ header nav form input:hover {
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 .villager .single-villager .planning {
-  grid-area: 3/2/4/3;
+  grid-area: 4/1/5/3;
   border: 2px dashed #D61E92;
   padding: 1rem;
 }
@@ -359,6 +368,7 @@ html body .hidden {
 html body main {
   max-width: 65vw;
   margin: 0 auto;
+  padding: 2rem;
   box-shadow: inset 0.3rem 0px 0px 0px rgba(217, 217, 217, 0.6), inset -0.3rem 0px 0px 0px rgba(217, 217, 217, 0.6), inset 0.6rem 0px 0px 0px rgba(217, 217, 217, 0.4), inset -0.6rem 0px 0px 0px rgba(217, 217, 217, 0.4);
 }
 html body p {
