--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -28,6 +28,7 @@ html {
         main {
             max-width: 65vw;
             margin: 0 auto;
+            padding: 2rem;
             box-shadow: inset .3rem 0px 0px 0px rgba(217,217,217,0.6),
                         inset -.3rem 0px 0px 0px rgba(217,217,217,0.6),
                         inset .6rem 0px 0px 0px rgba(217,217,217,0.4),
