--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -2,30 +2,30 @@
 
 .villager {
     background-color: $background-main;
-    padding: 1.5rem;
     
     .single-villager {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 18rem repeat(2, auto);
+        grid-template-rows: 14rem repeat(3, auto);
         grid-row-gap: 1rem;
         grid-column-gap: 2rem;
     
         .villager-picture {
-            grid-area: 1/1/2/2;
+            grid-area: 1/1/2/3;
             justify-self: center;
             width: 14rem;
-            padding-top: .6rem;
-            padding: 0 .6rem;
             background-color: $green;
             clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
         }
     
         .villager-general {
-            grid-area: 2/1/3/2;
+            grid-area: 2/1/3/3;
             justify-self: center;
-            padding: 1rem 2rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            width: 14rem;
             text-align:center;
+            border: 2px dashed $pink;
         }
     
         .title {
@@ -43,7 +43,6 @@
                 cursor: pointer;
                 
                 &.button-focus {
-                    // background-color: $pink;
                     font-weight: bolder;
                     clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
                 }
@@ -54,19 +53,31 @@
             grid-area: 3/1/4/2;
             border: 2px dashed $pink;
             padding: 1rem;
+
+            h3 {
+
+                button {
+                    border: none;
+                    background-color: $blue;
+                    padding: 0.6rem .8rem;
+                    font-family: $text-font;
+                    color: $background-main;
+                    font-size:1.05rem;
+                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+                }
+            }
     
-            .events {
+            table {
                 tr {
                     th {
-                        width: 9rem;
-                        text-align: left;
+                        padding-top: .7rem;
                     }
                 }
             }
         }
         
         .gifts {
-            grid-area: 1/2/3/3;
+            grid-area: 3/2/4/3;
             border: 2px dashed $pink;
             padding: 1rem;
 
@@ -85,7 +96,7 @@
         }
     
         .planning {
-            grid-area: 3/2/4/3;
+            grid-area: 4/1/5/3;
             border: 2px dashed $pink;
             padding: 1rem;
         }
