Still working on the villager page layout, doing the schedule part

--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -58,5 +58,9 @@ html {
         h3 {
             margin-bottom: 1.5rem;
         }
+
+        table {
+            border-collapse: collapse;
+        }
     }
 }
