--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -187,7 +187,11 @@ header nav form input:hover {
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 .villager .single-villager .villager-events table tr th {
-  padding-top: 0.7rem;
+  padding: 0.7rem 0;
+  background-color: #D9D9D9;
+}
+.villager .single-villager .villager-events table tr td {
+  padding-bottom: 0.8rem;
 }
 .villager .single-villager .gifts {
   grid-area: 3/2/4/3;
@@ -204,10 +208,24 @@ header nav form input:hover {
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
+.villager .single-villager .gifts table tr th {
+  padding: 0.7rem 0;
+  background-color: #D9D9D9;
+}
+.villager .single-villager .gifts table tr td {
+  padding-bottom: 0.8rem;
+}
 .villager .single-villager .planning {
   grid-area: 4/1/5/3;
   border: 2px dashed #D61E92;
   padding: 1rem;
+}
+.villager .single-villager .planning .events {
+  width: 100%;
+}
+.villager .single-villager .planning .events table thead tr th {
+  padding: 0.7rem 0;
+  background-color: #D9D9D9;
 }
 
 .admin-header {
@@ -389,4 +407,7 @@ html body h2 {
 }
 html body h3 {
   margin-bottom: 1.5rem;
+}
+html body table {
+  border-collapse: collapse;
 }/*# sourceMappingURL=style.css.map */
