--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -69,8 +69,14 @@
     
             table {
                 tr {
+
                     th {
-                        padding-top: .7rem;
+                        padding: .7rem 0;
+                        background-color: $background-body;
+                    }
+
+                    td {
+                        padding-bottom: .8rem;
                     }
                 }
             }
@@ -93,12 +99,42 @@
                     clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
                 }
             }
+
+            table {
+                tr {
+
+                    th {
+                        padding: .7rem 0;
+                        background-color: $background-body;
+                    }
+
+                    td {
+                        padding-bottom: .8rem;
+                    }
+                }
+            }
         }
     
         .planning {
             grid-area: 4/1/5/3;
             border: 2px dashed $pink;
             padding: 1rem;
+
+            .events {
+                width: 100%;
+
+                table {
+                    thead {
+                        tr {
+                            th {
+                                padding: .7rem 0;
+                                background-color: $background-body;
+                            }
+                        }
+                        
+                    }
+                }
+            }
         }
     }
 }
