--- a/templates/users/villagers/villager.phtml
+++ b/templates/users/villagers/villager.phtml
@@ -27,7 +27,7 @@
         </section>
 
         <section id="events" class="villager-events">
-            <h3><button>Events</button></h3>
+            <h3>Events</h3>
             <table>
                 <?php
                     // var_dump($villager->getEvents());
@@ -45,7 +45,7 @@
         </section>
 
         <section id="gifts" class="gifts">
-            <h3><button>Gifts</button></h3>
+            <h3>Gifts</h3>
             <table>
                 <tr>
                     <th>Loves</th>
