--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -135,6 +135,19 @@ header nav form input:hover {
   grid-row-gap: 1rem;
   grid-column-gap: 2rem;
 }
+.villager .single-villager h3 {
+  width: -moz-fit-content;
+  width: fit-content;
+  border: none;
+  background-color: #4361EE;
+  padding: 0.6rem 0.8rem;
+  font-family: "Inconsolata", sans-serif;
+  font-weight: bolder;
+  color: #FAFAFA;
+  font-size: 1.2rem;
+  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+}
 .villager .single-villager .villager-picture {
   grid-area: 1/1/2/3;
   justify-self: center;
@@ -153,20 +166,20 @@ header nav form input:hover {
   border: 2px dashed #D61E92;
 }
 .villager .single-villager .title {
+  width: -moz-fit-content;
+  width: fit-content;
   justify-self: center;
-}
-.villager .single-villager .title button {
   border: none;
   background-color: #4361EE;
   padding: 0.6rem 0.8rem;
   font-family: "Inconsolata", sans-serif;
   color: #FAFAFA;
-  font-size: 1.05rem;
+  font-size: 1.2rem;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
   cursor: pointer;
 }
-.villager .single-villager .title button.button-focus {
+.villager .single-villager .title.button-focus {
   font-weight: bolder;
   -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
           clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
@@ -176,15 +189,8 @@ header nav form input:hover {
   border: 2px dashed #D61E92;
   padding: 1rem;
 }
-.villager .single-villager .villager-events h3 button {
-  border: none;
-  background-color: #4361EE;
-  padding: 0.6rem 0.8rem;
-  font-family: "Inconsolata", sans-serif;
-  color: #FAFAFA;
-  font-size: 1.05rem;
-  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+.villager .single-villager .villager-events table {
+  width: 100%;
 }
 .villager .single-villager .villager-events table tr th {
   padding: 0.7rem 0;
@@ -197,16 +203,6 @@ header nav form input:hover {
   grid-area: 3/2/4/3;
   border: 2px dashed #D61E92;
   padding: 1rem;
-}
-.villager .single-villager .gifts h3 button {
-  border: none;
-  background-color: #4361EE;
-  padding: 0.6rem 0.8rem;
-  font-family: "Inconsolata", sans-serif;
-  color: #FAFAFA;
-  font-size: 1.05rem;
-  -webkit-clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-          clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
 }
 .villager .single-villager .gifts table tr th {
   padding: 0.7rem 0;
@@ -223,9 +219,25 @@ header nav form input:hover {
 .villager .single-villager .planning .events {
   width: 100%;
 }
+.villager .single-villager .planning .events table {
+  width: 100%;
+  margin: 1rem 0;
+}
 .villager .single-villager .planning .events table thead tr th {
-  padding: 0.7rem 0;
+  padding: 0.4rem 0;
   background-color: #D9D9D9;
+}
+.villager .single-villager .planning .events table thead tr th button {
+  background-color: #D9D9D9;
+  -webkit-clip-path: none;
+          clip-path: none;
+  color: #0C092B;
+  font-weight: bolder;
+}
+.villager .single-villager .planning .events table tbody td.day {
+  text-align: center;
+  padding: 0.4rem 0;
+  font-weight: 600;
 }
 
 .admin-header {
