--- a/assets/styles/scss/users/_villager.scss
+++ b/assets/styles/scss/users/_villager.scss
@@ -9,6 +9,18 @@
         grid-template-rows: 14rem repeat(3, auto);
         grid-row-gap: 1rem;
         grid-column-gap: 2rem;
+
+        h3 {
+            width: fit-content;
+            border: none;
+            background-color: $blue;
+            padding: 0.6rem .8rem;
+            font-family: $text-font;
+            font-weight: bolder;
+            color: $background-main;
+            font-size:1.2rem;
+            clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
+        }
     
         .villager-picture {
             grid-area: 1/1/2/3;
@@ -29,24 +41,23 @@
         }
     
         .title {
+            width: fit-content;
             justify-self:center;
-
-            button {
-                border: none;
-                background-color: $blue;
-                padding: 0.6rem .8rem;
-                font-family: $text-font;
-                color: $background-main;
-                font-size:1.05rem;
-                clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
-                                        100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-                cursor: pointer;
-                
-                &.button-focus {
-                    font-weight: bolder;
-                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-                }
+            border: none;
+            background-color: $blue;
+            padding: 0.6rem .8rem;
+            font-family: $text-font;
+            color: $background-main;
+            font-size:1.2rem;
+            clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                                    100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+            cursor: pointer;
+            
+            &.button-focus {
+                font-weight: bolder;
+                clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
             }
+            
         }
     
         .villager-events {
@@ -54,20 +65,9 @@
             border: 2px dashed $pink;
             padding: 1rem;
 
-            h3 {
-
-                button {
-                    border: none;
-                    background-color: $blue;
-                    padding: 0.6rem .8rem;
-                    font-family: $text-font;
-                    color: $background-main;
-                    font-size:1.05rem;
-                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-                }
-            }
-    
             table {
+                width: 100%;
+
                 tr {
 
                     th {
@@ -86,19 +86,6 @@
             grid-area: 3/2/4/3;
             border: 2px dashed $pink;
             padding: 1rem;
-
-            h3 {
-
-                button {
-                    border: none;
-                    background-color: $blue;
-                    padding: 0.6rem .8rem;
-                    font-family: $text-font;
-                    color: $background-main;
-                    font-size:1.05rem;
-                    clip-path: polygon(20% 0, 20% 10%, 10% 10%, 10% 20%, 0 20%, 0 80%, 10% 80%, 10% 90%, 20% 90%, 20% 100%, 80% 100%, 80% 90%, 90% 90%, 90% 80%, 100% 80%, 100% 20%, 90% 20%, 90% 10%, 80% 10%, 80% 0);
-                }
-            }
 
             table {
                 tr {
@@ -124,14 +111,33 @@
                 width: 100%;
 
                 table {
+                    width: 100%;
+                    margin: 1rem 0;
+
                     thead {
                         tr {
                             th {
-                                padding: .7rem 0;
+                                padding: .4rem 0;
                                 background-color: $background-body;
+
+                                button {
+                                    background-color: $background-body;
+                                    clip-path: none;
+                                    color: $text-color;
+                                    font-weight: bolder;
+                                }
                             }
                         }
-                        
+                    }
+
+                    tbody {
+                        td {
+                            &.day {
+                                text-align:center;
+                                padding: .4rem 0;
+                                font-weight: 600;
+                            }
+                        }
                     }
                 }
             }
