--- a/templates/users/staticpages/homepage.phtml
+++ b/templates/users/staticpages/homepage.phtml
@@ -1,35 +1,37 @@
-<section class="presentation">
-    <h2>Presentation</h2>
-    <img src="/res04-projet-soutenance/assets/images/NightMarket.png" alt="Picture of the market on the port in Stardew Valley"/>
-    <p>
-        Hello to you, dear fellow Stardew Valley worshipper ! I welcome you to the wonderful website. I made it as a fan of Stardew Valley. When playing, i always struggled to know where i was in the game (especially after a long period of time not playing).
-    </p>
-    <p>
-        The purpose of this website is to upload your save file (tutorial just below), and it will display your progress in the game.
-    </p>
-</section>
+<main>
+    <section class="presentation">
+        <h2>Presentation</h2>
+        <img src="/res04-projet-soutenance/assets/images/NightMarket.png" alt="Picture of the market on the port in Stardew Valley"/>
+        <p>
+            Hello to you, dear fellow Stardew Valley worshipper ! I welcome you to the wonderful website. I made it as a fan of Stardew Valley. When playing, i always struggled to know where i was in the game (especially after a long period of time not playing).
+        </p>
+        <p>
+            The purpose of this website is to upload your save file (tutorial just below), and it will display your progress in the game.
+        </p>
+    </section>
 
-<section class="find-file">
-    <h2>Where to find your file</h2>
-    <p>
-        First, you need to create an account to be able to upload your file. When logged in, go to <a href="/res04-projet-soutenance/my-games">my games</a> to find the uploader and follow the instructions below, depending on which plateform you play. The file is named <code>NameOfYourFarm_123456789</code>. This is the one you want to upload.
-    </p>
+    <section class="find-file">
+        <h2>Where to find your file</h2>
+        <p>
+            First, you need to create an account to be able to upload your file. When logged in, go to <a href="/res04-projet-soutenance/my-games">my games</a> to find the uploader and follow the instructions below, depending on which plateform you play. The file is named <code>NameOfYourFarm_123456789</code>. This is the one you want to upload.
+        </p>
 
-    <article>
-        <h3>Windows</h3>
-        <p>Press <code>Windows + R</code> and paste exactly what's following :</p>
-        <ul>
-            <li>
-                For Steam or GOG : <code>%appdata%\StardewValley\Saves</code>
-            </li>
-            <li>
-                For Xbox App : <code>%localappdata%\Packages\ConcernedApe.StardewValleyPC_0c8vynj4cqe4e\LocalCache\Roaming\StardewValley\Saves</code>
-            </li>
-        </ul>
-        <p>Click Ok to open the folder.</p>
-    </article>
+        <article>
+            <h3>Windows</h3>
+            <p>Press <code>Windows + R</code> and paste exactly what's following :</p>
+            <ul>
+                <li>
+                    For Steam or GOG : <code>%appdata%\StardewValley\Saves</code>
+                </li>
+                <li>
+                    For Xbox App : <code>%localappdata%\Packages\ConcernedApe.StardewValleyPC_0c8vynj4cqe4e\LocalCache\Roaming\StardewValley\Saves</code>
+                </li>
+            </ul>
+            <p>Click Ok to open the folder.</p>
+        </article>
 
-    <article>
-        <h3>Linux</h3>
-    </article>
-</section>  
+        <article>
+            <h3>Linux</h3>
+        </article>
+    </section>  
+</main>
