--- a/templates/users/user/login.phtml
+++ b/templates/users/user/login.phtml
@@ -1,12 +1,14 @@
-<form method="POST" action="/res04-projet-soutenance/login" id="login-form">
-    <fieldset>
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username">
-    </fieldset>
-    <fieldset>
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password">
-    </fieldset>
-    <p id="error"></p>
-    <input type="submit" name="login" id="login" value="Login">
-</form>
+<main>
+    <form method="POST" action="/res04-projet-soutenance/login" id="login-form" class="register-login">
+        <fieldset>
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username">
+        </fieldset>
+        <fieldset>
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password">
+        </fieldset>
+        <p id="error"></p>
+        <input type="submit" name="login" id="login" value="Login">
+    </form>
+<main>
