--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -45,6 +45,28 @@ header nav form input:hover {
   filter: saturate(0);
 }
 
+footer {
+  background-color: #4361EE;
+}
+footer nav {
+  max-width: 65vw;
+  margin: 0 auto;
+  padding: 0.8rem 0;
+  display: flex;
+  justify-content: center;
+}
+footer nav ul {
+  display: flex;
+}
+footer nav ul li {
+  margin: 0 6rem;
+}
+footer nav ul li a {
+  font-size: 1rem;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
 .presentation {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -240,6 +262,29 @@ header nav form input:hover {
   font-weight: 600;
 }
 
+form.register-login {
+  border: 2px dashed #D61E92;
+  width: 40rem;
+  margin: 0 auto;
+}
+form.register-login fieldset {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(2, auto);
+  grid-column-gap: 1.5rem;
+}
+form.register-login fieldset label {
+  grid-area: 1/1/2/2;
+}
+form.register-login fieldset input {
+  grid-area: 1/2/2/3;
+  justify-self: self-end;
+  width: 100%;
+}
+form.register-login fieldset p {
+  grid-area: 2/1/3/3;
+}
+
 .admin-header {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -397,8 +442,10 @@ html body .hidden {
 }
 html body main {
   max-width: 65vw;
+  min-height: 73vh;
   margin: 0 auto;
   padding: 2rem;
+  background-color: #FAFAFA;
   box-shadow: inset 0.3rem 0px 0px 0px rgba(217, 217, 217, 0.6), inset -0.3rem 0px 0px 0px rgba(217, 217, 217, 0.6), inset 0.6rem 0px 0px 0px rgba(217, 217, 217, 0.4), inset -0.6rem 0px 0px 0px rgba(217, 217, 217, 0.4);
 }
 html body p {
