Done the login and register form but the login form has an issue

--- a/assets/styles/scss/users/_villagers.scss
+++ b/assets/styles/scss/users/_villagers.scss
@@ -17,7 +17,7 @@
     
         &:focus {
             outline: none;
-            font-family: $text-color;
+            font-family: $text-font;
             color: $text-color;
         }
     }
