--- a/templates/users/user/create.phtml
+++ b/templates/users/user/create.phtml
@@ -1,4 +1,5 @@
 <main>
+    <h2>Register</h2>
     <form method="POST" action="/res04-projet-soutenance/register" id="register-form" class="register-login">
         <fieldset>
             <label for="username">Username</label>
