--- a/assets/styles/scss/forms/_register.scss
+++ b/assets/styles/scss/forms/_register.scss
@@ -1,27 +1,67 @@
 form {
     &.register-login {
+        display: grid;
         border: 2px dashed $pink;
         width: 40rem;
         margin: 0 auto;
+        padding: 1rem;
 
         fieldset {
             display:grid;
-            grid-template-columns: repeat(2, auto);
+            grid-template-columns: auto 20rem;
             grid-template-rows: repeat(2, auto);
             grid-column-gap: 1.5rem;
+            border: none;
+            margin: 1rem 0;
+            padding: 0;
 
             label {
                 grid-area: 1/1/2/2;
+                font-size: 1.2rem;
+                align-self:center;
             }
 
             input {
                 grid-area: 1/2/2/3;
                 justify-self: self-end;
                 width: 100%;
+                padding: .5rem 1rem;
+                border: 1px solid $green;
+                background-color: rgba(12,192,158, .4);
+
+                &::placeholder {
+                    color: $text-color;
+                    font-family: $text-font;
+                }
+
+                &:focus {
+                    outline: none;
+                    font-family: $text-font;
+                    color: $text-color;
+                }
             }
 
             p {
                 grid-area: 2/1/3/3;
+                font-size: .8rem;
+                color: $pink;
+            }
+        }
+
+        input[type=submit] {
+            justify-self: center;
+            margin-top: 1rem;
+            border:none;
+            background-color: $blue;
+            color: $background-main;
+            font-size: 1.1rem;
+            padding: .8rem 1.2rem;
+            clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
+                            100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+            cursor: pointer;
+
+            &:hover {
+                background-color: $pink;
             }
         }
     }
