--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -114,7 +114,7 @@ footer nav ul li a {
 }
 .all-villagers .search:focus {
   outline: none;
-  font-family: #0C092B;
+  font-family: "Inconsolata", sans-serif;
   color: #0C092B;
 }
 .all-villagers .villagers ul {
@@ -263,26 +263,66 @@ footer nav ul li a {
 }
 
 form.register-login {
+  display: grid;
   border: 2px dashed #D61E92;
   width: 40rem;
   margin: 0 auto;
+  padding: 1rem;
 }
 form.register-login fieldset {
   display: grid;
-  grid-template-columns: repeat(2, auto);
+  grid-template-columns: auto 20rem;
   grid-template-rows: repeat(2, auto);
   grid-column-gap: 1.5rem;
+  border: none;
+  margin: 1rem 0;
+  padding: 0;
 }
 form.register-login fieldset label {
   grid-area: 1/1/2/2;
+  font-size: 1.2rem;
+  align-self: center;
 }
 form.register-login fieldset input {
   grid-area: 1/2/2/3;
   justify-self: self-end;
   width: 100%;
+  padding: 0.5rem 1rem;
+  border: 1px solid #0CC09E;
+  background-color: rgba(12, 192, 158, 0.4);
+}
+form.register-login fieldset input::-moz-placeholder {
+  color: #0C092B;
+  font-family: "Inconsolata", sans-serif;
+}
+form.register-login fieldset input::placeholder {
+  color: #0C092B;
+  font-family: "Inconsolata", sans-serif;
+}
+form.register-login fieldset input:focus {
+  outline: none;
+  font-family: "Inconsolata", sans-serif;
+  color: #0C092B;
 }
 form.register-login fieldset p {
   grid-area: 2/1/3/3;
+  font-size: 0.8rem;
+  color: #D61E92;
+}
+form.register-login input[type=submit] {
+  justify-self: center;
+  margin-top: 1rem;
+  border: none;
+  background-color: #4361EE;
+  color: #FAFAFA;
+  font-size: 1.1rem;
+  padding: 0.8rem 1.2rem;
+  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  cursor: pointer;
+}
+form.register-login input[type=submit]:hover {
+  background-color: #D61E92;
 }
 
 .admin-header {
