--- a/templates/users/user/login.phtml
+++ b/templates/users/user/login.phtml
@@ -1,4 +1,5 @@
 <main>
+    <h2>Login</h2>
     <form method="POST" action="/res04-projet-soutenance/login" id="login-form" class="register-login">
         <fieldset>
             <label for="username">Username</label>
